[WK2] TestRunner does not support overridePreference with value "0" https://bugs.webkit.org/show_bug.cgi?id=97457

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-24
Reviewed by Alexey Proskuryakov.

Tools:

testRunner.overridePreference() was marked as taking a boolean
in argument in testRunner.idl even though the test cases are
passing strings to it. The current code works if the test
case wants to enable a setting and therefore passes "1" string.
However, if the test wants to disable a setting and passes "0"
string, the current code also evaluates this to true causing
certain test cases to fail.

The argument to testRunner.overridePreference() is now of string
type and a function has been added to convert the string passed
by the test to a boolean value.

* WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::toBool):
(WTR):
(WTR::TestRunner::overridePreference):
* WebKitTestRunner/InjectedBundle/TestRunner.h:
(TestRunner):

LayoutTests:

Unskip fast/regions/css-regions-disabled.html test case for
WebKit2 now that WebKitTestRunner actually supports overriding
a boolean preference with "0" value (to disable it).

* platform/efl-wk2/TestExpectations:
* platform/gtk-wk2/TestExpectations:
* platform/mac-wk2/Skipped:
* platform/qt-5.0-wk2/Skipped:

Canonical link: https://commits.webkit.org/115452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129430 268f45cc-cd09-0410-ab3c-d52691b4dbfc